--- a/demo/index.html
+++ b/demo/index.html
@@ -10,14 +10,14 @@
 <body>
 	<div id="wrapper">
 		<h1>JES</h1>
-		<label>Input:</label>
-		<textarea id="input">Attack at dawn!!</textarea>
+		<label>Plaintext:</label>
+		<textarea id="plaintext">Attack at dawn!!</textarea>
 		<label>Key:</label>
 		<input type="text" value="6162636465666768696a6b6c6d6e6f70" id="key" />
 		<label>IV:</label>
 		<input type="text" value="7172737475767778797a7b7c7d7e7f80" id="iv" />
-		<label>Encrypted:</label>
-		<textarea id="encrypted"></textarea>
+		<label>Ciphertext:</label>
+		<textarea id="ciphertext"></textarea>
 		<button id="encrypt">Encrypt</button>
 		<button id="decrypt">Decrypt</button>
 	</div>
